# particles

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: CompileFlags.cmake  FetchDependencies.cmake
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/particles/core/: particle.h
include/particles/graphics/: window.h
include/particles/math/: vec.h
src/: main.cc
src/graphics/: window.cc
